--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
     <meta name="theme-color" content="#09f" />
     <meta
       name="description"
-      content="I hate writing assignments so I made this tool that converts text to an image that looks like handwriting. You can copy paste text content into the textbox and click generate image button to generate image. Text to Handwriting"
+      content="Handwritten Prints is a tool that converts text to an image that looks like handwriting. You can copy paste text content into the textbox and click generate image button to generate image. Perfect for creating natural-looking handwritten documents!"
     />
     <meta
       name="keywords"
-      content="text to handwriting, text-to-handwrting, saurabh text to handwriting, convert text to image, write assignment online"
+      content="handwritten-prints, handwriting generator, text to handwriting, convert text to image, handwriting converter"
     />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="author" content="Saurabh Daware" />
-    <meta name="copyright" content="Saurabh Daware" />
+    <meta name="author" content="Brian Hexer" />
+    <meta name="copyright" content="Brian Hexer" />
     <meta name="robots" content="follow" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Text to Handwriting" />
+    <meta property="og:title" content="Handwritten Prints" />
     <meta
       property="og:url"
-      content="https://saurabhdaware.github.io/text-to-handwriting"
+      content="https://brianhexer.github.io/handwritten-prints"
     />
     <meta
       property="og:description"
-      content="I hate writing assignments so I made this tool that converts text to an image that looks like handwriting. You can copy paste text content into the textbox and click generate image button to generate image. Text to Handwriting"
+      content="Handwritten Prints is a tool that converts text to an image that looks like handwriting. You can copy paste text content into the textbox and click generate image button to generate image. Perfect for creating natural-looking handwritten documents!"
     />
-    <meta property="og:site_name" content="Text to Handwriting" />
+    <meta property="og:site_name" content="Handwriting Prints" />
 
     <meta
       property="og:image:secure_url"
@@ -63,7 +63,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@saurabhcodes" />
 
-    <title>Text to Handwriting</title>
+    <title>Handwritten Prints</title>
 
     <!-- Favicons -->
     <link
@@ -120,7 +120,7 @@
             src="images/moon.svg"
         /></span>
       </button>
-      <h1>Text to Handwriting</h1>
+      <h1>Handwritten Prints</h1>
       <section class="generate-image-section">
         <br /><br />
         <form id="generate-image-form">
@@ -512,18 +512,14 @@
       </section>
     </main>
     <footer style="padding: 40px 0px 10px 0px;">
-      Thank you for using Text to Handwriting! You can follow me on
-      <a href="https://twitter.com/saurabhcodes">Twitter @saurabhcodes</a>
+      Thank you for using Handwritten Prints! A powerful tool for converting
+      text to handwriting images.
       <br /><br />Do star the
-      <a href="https://github.com/saurabhdaware/text-to-handwriting"
-        >Text-to-Handwriting GitHub Repository</a
+      <a href="https://github.com/brianhexer/handwritten-prints"
+        >Handwritten Prints GitHub Repository</a
       >
-      and If you're using it for writing assignments, make sure you use it at
-      your own risk and If it fails and your teacher finds this tool, ask them
-      to star my GitHub as well :D <br />
-      <br />byeeee! <br /><br />
-      ~ Saurabh (<a href="https://saurabhdaware.in">https://saurabhdaware.in</a
-      >)
+      <br /><br />Enjoy! ✨ <br /><br />
+      ~ Brian Hexer
     </footer>
 
     <!-- Fixed Elements -->
@@ -571,7 +567,7 @@
     <!-- GitHub Corner logo -->
     <a
       tabindex="0"
-      href="https://github.com/saurabhdaware/text-to-handwriting"
+      href="https://github.com/brianhexer/handwritten-prints"
       rel="noopener noreferrer"
       target="_blank"
       class="github-corner"
