--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Load Fonts -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao&display=swap"
+      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Kalam|Patrick+Hand&display=swap"
     />
 
     <!-- CSS -->
@@ -217,6 +217,42 @@
                         value="'Liu Jian Mao Cao', cursive"
                       >
                         Liu Jian Mao Cao
+                      </option>
+                      <option
+                        style="font-family: 'Indie Flower', cursive; font-size: 13pt;"
+                        value="'Indie Flower', cursive"
+                      >
+                        Indie Flower
+                      </option>
+                      <option
+                        style="font-family: 'Shadows Into Light', cursive; font-size: 13pt;"
+                        value="'Shadows Into Light', cursive"
+                      >
+                        Shadows Into Light
+                      </option>
+                      <option
+                        style="font-family: 'Dancing Script', cursive; font-size: 13pt;"
+                        value="'Dancing Script', cursive"
+                      >
+                        Dancing Script
+                      </option>
+                      <option
+                        style="font-family: 'Pacifico', cursive; font-size: 13pt;"
+                        value="'Pacifico', cursive"
+                      >
+                        Pacifico
+                      </option>
+                      <option
+                        style="font-family: 'Kalam', cursive; font-size: 13pt;"
+                        value="'Kalam', cursive"
+                      >
+                        Kalam
+                      </option>
+                      <option
+                        style="font-family: 'Patrick Hand', cursive; font-size: 13pt;"
+                        value="'Patrick Hand', cursive"
+                      >
+                        Patrick Hand
                       </option>
                     </select>
                   </div>
