--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Load Fonts -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Kalam|Patrick+Hand&display=swap"
+      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Kalam|Patrick+Hand|Baloo|Baloo+2&display=swap"
     />
 
     <!-- CSS -->
@@ -203,6 +203,30 @@
                         Homemade Apple
                       </option>
                       <option value="Hindi_Font">Kruti-dev(Hindi)</option>
+                      <option
+                        style="font-family: 'Baloo', sans-serif; font-size: 13pt;"
+                        value="'Baloo', sans-serif"
+                      >
+                        Baloo (Tamil)
+                      </option>
+                      <option
+                        style="font-family: 'Baloo', sans-serif; font-size: 13pt;"
+                        value="'Baloo', sans-serif"
+                      >
+                        Baloo (Malayalam)
+                      </option>
+                      <option
+                        style="font-family: 'Baloo 2', sans-serif; font-size: 13pt;"
+                        value="'Baloo 2', sans-serif"
+                      >
+                        Baloo 2 (Telugu)
+                      </option>
+                      <option
+                        style="font-family: 'Baloo 2', sans-serif; font-size: 13pt;"
+                        value="'Baloo 2', sans-serif"
+                      >
+                        Baloo 2 (Kannada)
+                      </option>
                       <option
                         style="font-family: 'Caveat', cursive; font-size: 13pt;"
                         value="'Caveat', cursive"
