Add @font-face declarations for Indian language fonts (Tamil, Malayalam, Telugu, Kannada)

--- a/index.html
+++ b/index.html
@@ -204,28 +204,28 @@
                       </option>
                       <option value="Hindi_Font">Kruti-dev(Hindi)</option>
                       <option
-                        style="font-family: 'Baloo', sans-serif; font-size: 13pt;"
-                        value="'Baloo', sans-serif"
+                        style="font-family: 'Tamil_Font', sans-serif; font-size: 13pt;"
+                        value="Tamil_Font"
                       >
-                        Baloo (Tamil)
+                        Tamil Font
                       </option>
                       <option
-                        style="font-family: 'Baloo', sans-serif; font-size: 13pt;"
-                        value="'Baloo', sans-serif"
+                        style="font-family: 'Malayalam_Font', sans-serif; font-size: 13pt;"
+                        value="Malayalam_Font"
                       >
-                        Baloo (Malayalam)
+                        Malayalam Font
                       </option>
                       <option
-                        style="font-family: 'Baloo 2', sans-serif; font-size: 13pt;"
-                        value="'Baloo 2', sans-serif"
+                        style="font-family: 'Telugu_Font', sans-serif; font-size: 13pt;"
+                        value="Telugu_Font"
                       >
-                        Baloo 2 (Telugu)
+                        Telugu Font
                       </option>
                       <option
-                        style="font-family: 'Baloo 2', sans-serif; font-size: 13pt;"
-                        value="'Baloo 2', sans-serif"
+                        style="font-family: 'Kannada_Font', sans-serif; font-size: 13pt;"
+                        value="Kannada_Font"
                       >
-                        Baloo 2 (Kannada)
+                        Kannada Font
                       </option>
                       <option
                         style="font-family: 'Caveat', cursive; font-size: 13pt;"
