--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <!-- Load Fonts -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Kalam|Patrick+Hand|Baloo|Baloo+2&display=swap"
+      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Kalam|Patrick+Hand|Permanent+Marker|Architects+Daughter|Amatic+SC|Handlee|Nothing+You+Could+Do|Satisfy|Covered+By+Your+Grace|Zeyada&display=swap"
     />
 
     <!-- CSS -->
@@ -253,6 +253,54 @@
                         value="'Patrick Hand', cursive"
                       >
                         Patrick Hand
+                      </option>
+                      <option
+                        style="font-family: 'Permanent Marker', cursive; font-size: 13pt;"
+                        value="'Permanent Marker', cursive"
+                      >
+                        Permanent Marker
+                      </option>
+                      <option
+                        style="font-family: 'Architects Daughter', cursive; font-size: 13pt;"
+                        value="'Architects Daughter', cursive"
+                      >
+                        Architects Daughter
+                      </option>
+                      <option
+                        style="font-family: 'Amatic SC', cursive; font-size: 13pt;"
+                        value="'Amatic SC', cursive"
+                      >
+                        Amatic SC
+                      </option>
+                      <option
+                        style="font-family: 'Handlee', cursive; font-size: 13pt;"
+                        value="'Handlee', cursive"
+                      >
+                        Handlee
+                      </option>
+                      <option
+                        style="font-family: 'Nothing You Could Do', cursive; font-size: 13pt;"
+                        value="'Nothing You Could Do', cursive"
+                      >
+                        Nothing You Could Do
+                      </option>
+                      <option
+                        style="font-family: 'Satisfy', cursive; font-size: 13pt;"
+                        value="'Satisfy', cursive"
+                      >
+                        Satisfy
+                      </option>
+                      <option
+                        style="font-family: 'Covered By Your Grace', cursive; font-size: 13pt;"
+                        value="'Covered By Your Grace', cursive"
+                      >
+                        Covered By Your Grace
+                      </option>
+                      <option
+                        style="font-family: 'Zeyada', cursive; font-size: 13pt;"
+                        value="'Zeyada', cursive"
+                      >
+                        Zeyada
                       </option>
                     </select>
                   </div>
