--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             src="images/moon.svg"
         /></span>
       </button>
-      <h1>Handwritten Prints</h1>
+      <img alt="Handwritten-Prints title image" src="Handwritten Prints.png" />
       <section class="generate-image-section">
         <br /><br />
         <form id="generate-image-form">
@@ -496,6 +496,9 @@
         </div>
       </section>
 
+      <p align="center">
+      <img alt="Handwritten-Prints title image" src="Handwritten Prints.png" />
+      
       <section id="how-to-add-handwriting">
         <h2>🤓 Guide to add your own handwriting</h2>
         <div>
