--- a/index.html
+++ b/index.html
@@ -496,6 +496,26 @@
         </div>
       </section>
 
+      <section id="sponsors">
+        <h2>🤗 Sponsors</h2>
+        <p>
+          This tool is completely free and neither stores any of your data for
+          money so maybe you can consider being patron or making an one time
+          payment with buy me a coffee to help the creator 🤗
+        </p>
+        <p>
+          <a href="https://www.buymeacoffee.com/brianhexer">
+            <img
+              loading="lazy"
+              style="border-radius: 4px;"
+              alt="Buy me a Coffee Button"
+              width="200"
+              src="https://cdn.buymeacoffee.com/buttons/default-yellow.png"
+            />
+          </a>
+        </p>
+      </section>
+
       <p align="center">
       <img alt="Handwritten-Prints title image" src="Handwritten Prints.png" />
       
