--- a/index.html
+++ b/index.html
@@ -504,6 +504,16 @@
           payment with buy me a coffee to help the creator 🤗
         </p>
         <p>
+          <a href="https://www.patreon.com/brianhexer">
+            <img
+              loading="lazy"
+              style="border-radius: 4px;"
+              alt="Buy me a Coffee Button"
+              width="200"
+              src="https://c5.patreon.com/external/logo/become_a_patron_button.png"
+            />
+          </a>
+          &nbsp;
           <a href="https://www.buymeacoffee.com/brianhexer">
             <img
               loading="lazy"
