--- a/index.html
+++ b/index.html
@@ -496,6 +496,36 @@
         </div>
       </section>
 
+
+      <p align="center">
+      <img alt="Handwritten-Prints title image" src="Handwritten Prints.png" />
+      
+      <section id="how-to-add-handwriting">
+        <h2>🤓 Guide to add your own handwriting</h2>
+        <div>
+          <ul>
+            <li>
+              To use your handwriting, you will have to generate font of your
+              handwriting.
+            </li>
+            <li>
+              There are websites like
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://www.calligraphr.com/en/"
+                >Calligraphr</a
+              >
+              that let you do that.
+            </li>
+            <li>
+              Once you get .ttf file of your handwriting, upload it from 'Upload
+              your handwriting font' button in customizations sections
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <section id="sponsors">
         <h2>🤗 Sponsors</h2>
         <p>
@@ -526,33 +556,9 @@
         </p>
       </section>
 
-      <p align="center">
-      <img alt="Handwritten-Prints title image" src="Handwritten Prints.png" />
-      
-      <section id="how-to-add-handwriting">
-        <h2>🤓 Guide to add your own handwriting</h2>
-        <div>
-          <ul>
-            <li>
-              To use your handwriting, you will have to generate font of your
-              handwriting.
-            </li>
-            <li>
-              There are websites like
-              <a
-                target="_blank"
-                rel="noopener noreferrer"
-                href="https://www.calligraphr.com/en/"
-                >Calligraphr</a
-              >
-              that let you do that.
-            </li>
-            <li>
-              Once you get .ttf file of your handwriting, upload it from 'Upload
-              your handwriting font' button in customizations sections
-            </li>
-          </ul>
-        </div>
+      <section id="github-contributors">
+        <h2>👫 GitHub Contributors</h2>
+        <div class="project-contributors" id="project-contributors"></div>
       </section>
 
       <section id="faq">
