Add multilingual handwriting fonts (Tamil, Arabic, CJK, Cyrillic)

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
       href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Kalam|Patrick+Hand|Permanent+Marker|Architects+Daughter|Amatic+SC|Handlee|Nothing+You+Could+Do|Satisfy|Covered+By+Your+Grace|Zeyada&display=swap"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&display=swap"
+    />
+
     <!-- CSS -->
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/features.css" />
@@ -203,6 +208,42 @@
                         Homemade Apple
                       </option>
                       <option value="Hindi_Font">Kruti-dev(Hindi)</option>
+                      <option
+                        style="font-family: 'Kavivanar', cursive; font-size: 13pt;"
+                        value="'Kavivanar', cursive"
+                      >
+                        Kavivanar (Tamil)
+                      </option>
+                      <option
+                        style="font-family: 'Reem Kufi Ink', cursive; font-size: 13pt;"
+                        value="'Reem Kufi Ink', cursive"
+                      >
+                        Reem Kufi Ink (Arabic)
+                      </option>
+                      <option
+                        style="font-family: 'Ma Shan Zheng', cursive; font-size: 13pt;"
+                        value="'Ma Shan Zheng', cursive"
+                      >
+                        Ma Shan Zheng (Chinese)
+                      </option>
+                      <option
+                        style="font-family: 'Yomogi', cursive; font-size: 13pt;"
+                        value="'Yomogi', cursive"
+                      >
+                        Yomogi (Japanese)
+                      </option>
+                      <option
+                        style="font-family: 'Nanum Pen Script', cursive; font-size: 13pt;"
+                        value="'Nanum Pen Script', cursive"
+                      >
+                        Nanum Pen Script (Korean)
+                      </option>
+                      <option
+                        style="font-family: 'Marck Script', cursive; font-size: 13pt;"
+                        value="'Marck Script', cursive"
+                      >
+                        Marck Script (Cyrillic)
+                      </option>
                       <option
                         style="font-family: 'Caveat', cursive; font-size: 13pt;"
                         value="'Caveat', cursive"
