--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&display=swap&subset=latin,latin-ext,arabic,cyrillic,cyrillic-ext,tamil,korean,chinese-simplified,japanese"
     />
 
     <!-- CSS -->
