--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
       href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&display=swap&subset=latin,latin-ext,arabic,cyrillic,cyrillic-ext,tamil,korean,chinese-simplified,japanese"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;500;600&display=swap&subset=latin,latin-ext,tamil"
+    />
+
     <!-- CSS -->
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="stylesheet" href="./css/features.css" />
@@ -213,6 +218,12 @@
                         value="'Kavivanar', cursive"
                       >
                         Kavivanar (Tamil)
+                      </option>
+                      <option
+                        style="font-family: 'Anek Tamil', sans-serif; font-size: 13pt;"
+                        value="'Anek Tamil', sans-serif"
+                      >
+                        Anek Tamil
                       </option>
                       <option
                         style="font-family: 'Reem Kufi Ink', cursive; font-size: 13pt;"
