Add Auto-transliterate toggle and visual transliteration for Tamil/Arabic/Japanese/Korean/Cyrillic

--- a/index.html
+++ b/index.html
@@ -356,6 +356,13 @@
                       </option>
                     </select>
                   </div>
+                  <div>
+                    <label class="block" for="auto-transliterate-toggle">Auto-transliterate from Latin to selected script <small>(Beta)</small></label>
+                    <label class="switch-toggle" for="auto-transliterate-toggle">
+                      <input id="auto-transliterate-toggle" type="checkbox" role="switch" aria-checked="false" />
+                      <span class="status">off</span>
+                    </label>
+                  </div>
                   <div class="upload-handwriting-container">
                     <label class="block" for="font-file"
                       >Upload your handwriting font <small>(Beta)</small>&nbsp;
