Default Auto-transliterate ON; auto-apply for Tamil/Arabic/Japanese/Korean/Cyrillic and restore when switching

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
                   <div>
                     <label class="block" for="auto-transliterate-toggle">Auto-transliterate from Latin to selected script <small>(Beta)</small></label>
                     <label class="switch-toggle" for="auto-transliterate-toggle">
-                      <input id="auto-transliterate-toggle" type="checkbox" role="switch" aria-checked="false" />
-                      <span class="status">off</span>
+                      <input id="auto-transliterate-toggle" type="checkbox" role="switch" aria-checked="true" checked />
+                      <span class="status">on</span>
                     </label>
                   </div>
                   <div class="upload-handwriting-container">
