--- a/index.html
+++ b/index.html
@@ -357,10 +357,19 @@
                     </select>
                   </div>
                   <div>
-                    <label class="block" for="auto-transliterate-toggle">Auto-transliterate from Latin to selected script <small>(Beta)</small></label>
-                    <label class="switch-toggle" for="auto-transliterate-toggle">
-                      <input id="auto-transliterate-toggle" type="checkbox" role="switch" aria-checked="true" checked />
-                      <span class="status">on</span>
+                    <label for="auto-transliterate-toggle">
+                      Auto-transliterate from Latin to selected script <small>(Beta)</small>
+                      <span aria-label="auto transliterate status" class="status">on</span>
+                    </label>
+                    <label class="switch-toggle outer">
+                      <input
+                        aria-checked="true"
+                        checked
+                        aria-label="Auto Transliterate Button"
+                        id="auto-transliterate-toggle"
+                        type="checkbox"
+                      />
+                      <div></div>
                     </label>
                   </div>
                   <div class="upload-handwriting-container">
