Add LibreTranslate API integration for real language translation

--- a/index.html
+++ b/index.html
@@ -372,6 +372,16 @@
                       <div></div>
                     </label>
                   </div>
+                  <div>
+                    <label class="block" for="translate-button">Real Translation <small>(LibreTranslate API)</small></label>
+                    <button
+                      id="translate-button"
+                      type="button"
+                      style="font-size: 0.9rem; width: 100%; margin-top: 5px;"
+                    >
+                      Translate to Selected Language
+                    </button>
+                  </div>
                   <div class="upload-handwriting-container">
                     <label class="block" for="font-file"
                       >Upload your handwriting font <small>(Beta)</small>&nbsp;
