Add translate-to-English control

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -138,7 +138,7 @@
           <div class="display-flex output-grid responsive-flex">
             <div class="flex-1 page-container-super">
               <div>
-                <h2 style="margin-top: 0px;">Input</h2>
+                <h2 style="margin-top: 0px">Input</h2>
                 <label class="block" for="note">Type/Paste text here</label>
               </div>
 
@@ -177,7 +177,7 @@
                 <button
                   id="draw-diagram-button"
                   type="button"
-                  style="font-size: 0.9rem; margin-top: 5px;"
+                  style="font-size: 0.9rem; margin-top: 5px"
                   class="draw-button"
                 >
                   Draw <small>(Beta)</small>
@@ -187,9 +187,9 @@
 
             <div class="customization-col">
               <!-- Handwriting Font -->
-              <div style="padding: 5px 0px 5px 0px;">
+              <div style="padding: 5px 0px 5px 0px">
                 <b>Customizations</b> <small>(Optional)</small>
-                <p style="font-size: 0.8rem;">
+                <p style="font-size: 0.8rem">
                   <em
                     >Note: Few changes may reflect only in the generated image
                     and not in the preview</em
@@ -207,149 +207,194 @@
                     <select id="handwriting-font">
                       <option
                         selected
-                        style="font-family: 'Homemade Apple';"
+                        style="font-family: 'Homemade Apple'"
                         value="'Homemade Apple', cursive"
                       >
                         Homemade Apple
                       </option>
                       <option value="Hindi_Font">Kruti-dev(Hindi)</option>
                       <option
-                        style="font-family: 'Kavivanar', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Kavivanar', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Kavivanar', cursive"
                       >
                         Kavivanar (Tamil)
                       </option>
                       <option
-                        style="font-family: 'Anek Tamil', sans-serif; font-size: 13pt;"
+                        style="
+                          font-family: 'Anek Tamil', sans-serif;
+                          font-size: 13pt;
+                        "
                         value="'Anek Tamil', sans-serif"
                       >
                         Anek Tamil
                       </option>
                       <option
-                        style="font-family: 'Reem Kufi Ink', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Reem Kufi Ink', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Reem Kufi Ink', cursive"
                       >
                         Reem Kufi Ink (Arabic)
                       </option>
                       <option
-                        style="font-family: 'Ma Shan Zheng', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Ma Shan Zheng', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Ma Shan Zheng', cursive"
                       >
                         Ma Shan Zheng (Chinese)
                       </option>
                       <option
-                        style="font-family: 'Yomogi', cursive; font-size: 13pt;"
+                        style="font-family: 'Yomogi', cursive; font-size: 13pt"
                         value="'Yomogi', cursive"
                       >
                         Yomogi (Japanese)
                       </option>
                       <option
-                        style="font-family: 'Nanum Pen Script', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Nanum Pen Script', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Nanum Pen Script', cursive"
                       >
                         Nanum Pen Script (Korean)
                       </option>
                       <option
-                        style="font-family: 'Marck Script', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Marck Script', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Marck Script', cursive"
                       >
                         Marck Script (Cyrillic)
                       </option>
                       <option
-                        style="font-family: 'Caveat', cursive; font-size: 13pt;"
+                        style="font-family: 'Caveat', cursive; font-size: 13pt"
                         value="'Caveat', cursive"
                       >
                         Caveat
                       </option>
                       <option
-                        style="
-                          font-family: 'Liu Jian Mao Cao';
-                          font-size: 13pt;
-                        "
+                        style="font-family: 'Liu Jian Mao Cao'; font-size: 13pt"
                         value="'Liu Jian Mao Cao', cursive"
                       >
                         Liu Jian Mao Cao
                       </option>
                       <option
-                        style="font-family: 'Indie Flower', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Indie Flower', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Indie Flower', cursive"
                       >
                         Indie Flower
                       </option>
                       <option
-                        style="font-family: 'Shadows Into Light', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Shadows Into Light', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Shadows Into Light', cursive"
                       >
                         Shadows Into Light
                       </option>
                       <option
-                        style="font-family: 'Dancing Script', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Dancing Script', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Dancing Script', cursive"
                       >
                         Dancing Script
                       </option>
                       <option
-                        style="font-family: 'Pacifico', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Pacifico', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Pacifico', cursive"
                       >
                         Pacifico
                       </option>
                       <option
-                        style="font-family: 'Kalam', cursive; font-size: 13pt;"
+                        style="font-family: 'Kalam', cursive; font-size: 13pt"
                         value="'Kalam', cursive"
                       >
                         Kalam
                       </option>
                       <option
-                        style="font-family: 'Patrick Hand', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Patrick Hand', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Patrick Hand', cursive"
                       >
                         Patrick Hand
                       </option>
                       <option
-                        style="font-family: 'Permanent Marker', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Permanent Marker', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Permanent Marker', cursive"
                       >
                         Permanent Marker
                       </option>
                       <option
-                        style="font-family: 'Architects Daughter', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Architects Daughter', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Architects Daughter', cursive"
                       >
                         Architects Daughter
                       </option>
                       <option
-                        style="font-family: 'Amatic SC', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Amatic SC', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Amatic SC', cursive"
                       >
                         Amatic SC
                       </option>
                       <option
-                        style="font-family: 'Handlee', cursive; font-size: 13pt;"
+                        style="font-family: 'Handlee', cursive; font-size: 13pt"
                         value="'Handlee', cursive"
                       >
                         Handlee
                       </option>
                       <option
-                        style="font-family: 'Nothing You Could Do', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Nothing You Could Do', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Nothing You Could Do', cursive"
                       >
                         Nothing You Could Do
                       </option>
                       <option
-                        style="font-family: 'Satisfy', cursive; font-size: 13pt;"
+                        style="font-family: 'Satisfy', cursive; font-size: 13pt"
                         value="'Satisfy', cursive"
                       >
                         Satisfy
                       </option>
                       <option
-                        style="font-family: 'Covered By Your Grace', cursive; font-size: 13pt;"
+                        style="
+                          font-family: 'Covered By Your Grace', cursive;
+                          font-size: 13pt;
+                        "
                         value="'Covered By Your Grace', cursive"
                       >
                         Covered By Your Grace
                       </option>
                       <option
-                        style="font-family: 'Zeyada', cursive; font-size: 13pt;"
+                        style="font-family: 'Zeyada', cursive; font-size: 13pt"
                         value="'Zeyada', cursive"
                       >
                         Zeyada
@@ -358,8 +403,13 @@
                   </div>
                   <div>
                     <label for="auto-transliterate-toggle">
-                      Auto-transliterate from Latin to selected script <small>(Beta)</small>
-                      <span aria-label="auto transliterate status" class="status">on</span>
+                      Auto-transliterate from Latin to selected script
+                      <small>(Beta)</small>
+                      <span
+                        aria-label="auto transliterate status"
+                        class="status"
+                        >on</span
+                      >
                     </label>
                     <label class="switch-toggle outer">
                       <input
@@ -373,20 +423,29 @@
                     </label>
                   </div>
                   <div>
-                    <label class="block" for="translate-button">Real Translation <small>(LibreTranslate API)</small></label>
+                    <label class="block" for="translate-button"
+                      >Real Translation</label
+                    >
                     <button
                       id="translate-button"
                       type="button"
-                      style="font-size: 0.9rem; width: 100%; margin-top: 5px;"
+                      style="font-size: 0.9rem; width: 100%; margin-top: 5px"
                     >
                       Translate to Selected Language
+                    </button>
+                    <button
+                      id="translate-to-english-button"
+                      type="button"
+                      style="font-size: 0.9rem; width: 100%; margin-top: 6px"
+                    >
+                      Translate back to English
                     </button>
                   </div>
                   <div class="upload-handwriting-container">
                     <label class="block" for="font-file"
                       >Upload your handwriting font <small>(Beta)</small>&nbsp;
                       <a
-                        style="font-size: 1.1rem;"
+                        style="font-size: 1.1rem"
                         title="How to add your own handwriting"
                         href="#how-to-add-handwriting"
                       >
@@ -544,7 +603,7 @@
                   width: 80%;
                 "
               />
-              <div style="text-align: center; padding: 30px 0px;">
+              <div style="text-align: center; padding: 30px 0px">
                 <button
                   type="submit"
                   data-testid="generate-image-button"
@@ -561,10 +620,10 @@
       <!-- OUTPUT -->
       <section>
         <h2 id="output-header">Output</h2>
-        <div id="output" class="output" style="text-align: center;">
+        <div id="output" class="output" style="text-align: center">
           Click "Generate Image" Button to generate new image.
         </div>
-        <div style="text-align: center; padding: 30px;">
+        <div style="text-align: center; padding: 30px">
           <button class="imp-button" id="download-as-pdf-button">
             Download All Images as PDF
           </button>
@@ -574,10 +633,13 @@
         </div>
       </section>
 
-
       <p align="center">
-      <img alt="Handwritten-Prints title image" src="Handwritten Prints 360x120.png" />
-      
+        <img
+          alt="Handwritten-Prints title image"
+          src="Handwritten Prints 360x120.png"
+        />
+      </p>
+
       <section id="how-to-add-handwriting">
         <h2>🤓 Guide to add your own handwriting</h2>
         <div>
@@ -615,7 +677,7 @@
           <a href="https://www.patreon.com/brianhexer">
             <img
               loading="lazy"
-              style="border-radius: 4px;"
+              style="border-radius: 4px"
               alt="Buy me a Coffee Button"
               width="200"
               src="https://c5.patreon.com/external/logo/become_a_patron_button.png"
@@ -625,7 +687,7 @@
           <a href="https://www.buymeacoffee.com/brianhexer">
             <img
               loading="lazy"
-              style="border-radius: 4px;"
+              style="border-radius: 4px"
               alt="Buy me a Coffee Button"
               width="200"
               src="https://cdn.buymeacoffee.com/buttons/default-yellow.png"
@@ -672,7 +734,7 @@
         </div>
       </section>
     </main>
-    <footer style="padding: 40px 0px 10px 0px;">
+    <footer style="padding: 40px 0px 10px 0px">
       Thank you for using Handwritten Prints! A powerful tool for converting
       text to handwriting images.
       <br /><br />Do star the
@@ -689,20 +751,20 @@
       <div class="display-flex responsive-flex">
         <canvas
           id="diagram-canvas"
-          style="background-color: #fff;"
+          style="background-color: #fff"
           height="300px"
           width="600px"
         ></canvas>
         <div class="flex-1 buttons-container padding-around">
           <button
             id="add-to-paper-button"
-            style="margin-top: 5px; margin-bottom: 5px;"
+            style="margin-top: 5px; margin-bottom: 5px"
           >
             Add to Paper
           </button>
           <button
             id="draw-download-button"
-            style="margin-top: 5px; margin-bottom: 5px;"
+            style="margin-top: 5px; margin-bottom: 5px"
           >
             Download Image
           </button>
@@ -718,7 +780,7 @@
           <button
             id="clear-draw-canvas"
             class="blue-button"
-            style="background-color: #f30; color: #fff;"
+            style="background-color: #f30; color: #fff"
           >
             Clear Canvas
           </button>
@@ -752,7 +814,7 @@
         <path
           d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
           fill="currentColor"
-          style="transform-origin: 130px 106px;"
+          style="transform-origin: 130px 106px"
           class="octo-arm"
         ></path>
         <path
