Auto-translate on font change

--- a/index.html
+++ b/index.html
@@ -423,23 +423,10 @@
                     </label>
                   </div>
                   <div>
-                    <label class="block" for="translate-button"
-                      >Real Translation</label
-                    >
-                    <button
-                      id="translate-button"
-                      type="button"
-                      style="font-size: 0.9rem; width: 100%; margin-top: 5px"
-                    >
-                      Translate to Selected Language
-                    </button>
-                    <button
-                      id="translate-to-english-button"
-                      type="button"
-                      style="font-size: 0.9rem; width: 100%; margin-top: 6px"
-                    >
-                      Translate back to English
-                    </button>
+                    <p style="font-size: 0.85rem; margin: 0.4rem 0 0;">
+                      Full document auto-translates when you pick a language
+                      font. Disable the toggle above to keep Latin text.
+                    </p>
                   </div>
                   <div class="upload-handwriting-container">
                     <label class="block" for="font-file"
