Add Kalam Hindi font option

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&display=swap&subset=latin,latin-ext,arabic,cyrillic,cyrillic-ext,tamil,korean,chinese-simplified,japanese"
+      href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&display=swap&subset=latin,latin-ext,arabic,cyrillic,cyrillic-ext,tamil,korean,chinese-simplified,japanese,devanagari"
     />
 
     <link
@@ -213,6 +213,12 @@
                         Homemade Apple
                       </option>
                       <option value="Hindi_Font">Kruti-dev(Hindi)</option>
+                      <option
+                        style="font-family: 'Kalam', cursive; font-size: 13pt"
+                        value="'Kalam', cursive"
+                      >
+                        Kalam (Hindi)
+                      </option>
                       <option
                         style="
                           font-family: 'Kavivanar', cursive;
@@ -423,7 +429,7 @@
                     </label>
                   </div>
                   <div>
-                    <p style="font-size: 0.85rem; margin: 0.4rem 0 0;">
+                    <p style="font-size: 0.85rem; margin: 0.4rem 0 0">
                       Full document auto-translates when you pick a language
                       font. Disable the toggle above to keep Latin text.
                     </p>
