--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
     <!-- Load Fonts -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Kalam|Patrick+Hand|Permanent+Marker|Architects+Daughter|Amatic+SC|Handlee|Nothing+You+Could+Do|Satisfy|Covered+By+Your+Grace|Zeyada&display=swap"
+      href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto|Caveat|Liu+Jian+Mao+Cao|Indie+Flower|Shadows+Into+Light|Dancing+Script|Pacifico|Patrick+Hand|Permanent+Marker|Architects+Daughter|Amatic+SC|Handlee|Nothing+You+Could+Do|Satisfy|Covered+By+Your+Grace|Zeyada&display=swap"
     />
 
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&display=swap&subset=latin,latin-ext,arabic,cyrillic,cyrillic-ext,tamil,korean,chinese-simplified,japanese,devanagari"
+      href="https://fonts.googleapis.com/css2?family=Kavivanar&family=Reem+Kufi+Ink&family=Marck+Script&family=Ma+Shan+Zheng&family=Yomogi&family=Nanum+Pen+Script&family=Kalam&display=swap&subset=latin,latin-ext,arabic,cyrillic,cyrillic-ext,tamil,korean,chinese-simplified,japanese,devanagari"
     />
 
     <link
