Update transliteration and formatting

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                   </div>
                   <div>
                     <label for="auto-transliterate-toggle">
-                      Auto-transliterate from Latin to selected script
+                      Transulate from Latin to selected script
                       <small>(Beta)</small>
                       <span
                         aria-label="auto transliterate status"
