Update index formatting

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             src="images/moon.svg"
         /></span>
       </button>
-      <img alt="Handwritten-Prints title image" src="Handwritten Prints.png" />
+      <img alt="Handwritten-Prints title image" src="Handwritten Prints S.png" />
       <section class="generate-image-section">
         <br /><br />
         <form id="generate-image-form">
@@ -629,7 +629,7 @@
       <p align="center">
         <img
           alt="Handwritten-Prints title image"
-          src="Handwritten Prints 360x120.png"
+          src="Handwritten Prints.png"
         />
       </p>
 
