--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
             src="images/moon.svg"
         /></span>
       </button>
-      <img alt="Handwritten-Prints title image" src="Handwritten Prints S.png" />
+      <img
+        alt="Handwritten-Prints title image"
+        src="Handwritten.png"
+      />
       <section class="generate-image-section">
         <br /><br />
         <form id="generate-image-form">
