Add Handwritten.png and update index

--- a/index.html
+++ b/index.html
@@ -130,10 +130,7 @@
             src="images/moon.svg"
         /></span>
       </button>
-      <img
-        alt="Handwritten-Prints title image"
-        src="Handwritten.png"
-      />
+      <img alt="Handwritten-Prints title image" src="Handwritten.png" />
       <section class="generate-image-section">
         <br /><br />
         <form id="generate-image-form">
