Update auto-transliterate to auto-translate wording

--- a/index.html
+++ b/index.html
@@ -409,19 +409,16 @@
                   </div>
                   <div>
                     <label for="auto-transliterate-toggle">
-                      Transulate from Latin to selected script
+                      Auto-translate to selected language
                       <small>(Beta)</small>
-                      <span
-                        aria-label="auto transliterate status"
-                        class="status"
-                        >on</span
+                      <span aria-label="auto translate status" class="status"
+                        >off</span
                       >
                     </label>
                     <label class="switch-toggle outer">
                       <input
-                        aria-checked="true"
-                        checked
-                        aria-label="Auto Transliterate Button"
+                        aria-checked="false"
+                        aria-label="Auto Translate Button"
                         id="auto-transliterate-toggle"
                         type="checkbox"
                       />
@@ -430,8 +427,9 @@
                   </div>
                   <div>
                     <p style="font-size: 0.85rem; margin: 0.4rem 0 0">
-                      Full document auto-translates when you pick a language
-                      font. Disable the toggle above to keep Latin text.
+                      Enable to auto-translate your entire document when
+                      switching to a language font. Keep off to use the font
+                      with English text.
                     </p>
                   </div>
                   <div class="upload-handwriting-container">
